--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -2,6 +2,7 @@
     <qresource prefix="/">
         <file alias="data.csv">data.csv</file>
         <file alias="main.qml">main.qml</file>
+        <file alias="IconButton.qml">IconButton.qml</file>
         <file alias="Global.qml">Global.qml</file>
         <file alias="GradeWidgetBase.qml">GradeWidgetBase.qml</file>
         <file alias="French.qml">French.qml</file>
