fix the icon on android

--- a/src/android/res/drawable/splash.xml
+++ b/src/android/res/drawable/splash.xml
@@ -6,7 +6,7 @@
         </shape>
     </item>
     <item>
-         <bitmap android:src="@drawable/splash"
+         <bitmap android:src="@drawable/splashscreen"
         android:gravity="center"/>
     </item>
 </layer-list>
