--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -8,5 +8,7 @@
         <file alias="French.qml">French.qml</file>
         <file alias="YDS.qml">YDS.qml</file>
         <file alias="halfdome.jpg">halfdome.jpg</file>
+        <!--FIXME-->
+        <!--<file alias="icons/climbinggrades.svg">climbinggrades.svg</file>-->
     </qresource>
 </RCC>
