--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -1,6 +1,7 @@
 <RCC>
     <qresource prefix="/">
-        <file alias="scales.json">scales.json</file>
+        <file alias="leadscales.json">leadscales.json</file>
+        <file alias="boulderscales.json">boulderscales.json</file>
         <file alias="data.csv">data.csv</file>
         <file alias="main.qml">main.qml</file>
         <file alias="IconButton.qml">IconButton.qml</file>
