--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -14,7 +14,6 @@
         <file alias="Uiaa.qml">Uiaa.qml</file>
         <file alias="halfdome.jpg">halfdome.jpg</file>
         <file alias="qtquickcontrols2.conf">android/qtquickcontrols2.conf</file>
-        <!--FIXME-->
-        <!--<file alias="icons/climbinggrades.svg">climbinggrades.svg</file>-->
+        <file alias="icons/klimbgrades.svg">klimbgrades.svg</file>
     </qresource>
 </RCC>
